quest working now, cant test StepCount on emulator tho.
